@@ -31,6 +31,7 @@
    - Fix solde computing when archiving accounts.
    - Fix deletion of a single entry (todo #1473).
    - ofaBatTreeview: remove GTK_POLICY_NEVER attribute (todo #1472).
+   - Fix guided input validity of operation and effect dates (todo #1470).
 
  Other changes:
 
